repair navbar vertical alignment

--- a/style.css
+++ b/style.css
@@ -7,10 +7,11 @@
 nav {
     background-color: salmon;
     padding : 20px 10px;
-    font-size: 24px;
+    font-size: 18px;
     font-weight: bold;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 ul {
@@ -22,6 +23,7 @@ ul li {
     padding: 5px 10px;
     margin: 0 5px;
     cursor: pointer;
+
 }
 
 ul li:hover {
